- Enable full-text search of "online" help files
- Enable help for specific "settable" variables, as in
  "help set lbfgs"
- "mread": search the gretl working directory if the
  file is not found at first
- "dataset sortby": allow the use of a list to specify 
  multiple sort keys
- ODBC import: enable extraction of multiple data series
  per SQL query
- Export of data to R, interactively: add a message
  confirming that the export worked
- "foreign" code blocks: add support for GNU Octave
- GUI: add export/import of variable labels
- GUI: enable choice of ordering for Cholesky decomposition
  for VAR impulse response plots
- Filter functions movavg, bkfilt and hpfilt: offer
  greater control via additional optional arguments
- Add new functions, digamma, kdensity, monthlen and
  epochday (the latter two are calendrical) 
- Add new built-in constant: "macheps" gets the
  machine precision
- OS X package: add icons and associations for gretl data,
  script and session files
- Fix bug: errors in Exponential Moving Average in GUI
- Fix bug: non-ASCII characters not handled in function
  package upload to server
- Fix bug: double normal cdf did not handle correctly some 
  corner cases
- Fix bugs 2944000, 2956109
- Fix font-encoding issues on MS Windows: session-names
  with non-ASCII characters were not appearing in the gretl
  title bar; and the encoding was getting broken between
  copy and paste, e.g. in script windows
- Fix bug in Hausman test after tsls: ensure the sample size 
  is consistent
- Graphing via gnuplot: require version >= 4.2.0

01/24/2010 version 1.8.7
- GUI enhancement: add apparatus to help keep track of
  gretl windows
- GUI menus: clean-up and consolidation
- New command: "qqplot" (Quantile-Quantile plots)
- Normal random samples: implement the Ziggurat method
- "dataset" command: document the "clear" keyword
- "rmplot" command: save $test and $pvalue
- "restrict" with --bootstrap option: record $test and
  $pvalue